--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,13 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://cardinalcommerce.bintray.com/android"
+            credentials {
+                username 'braintree-team-sdk@cardinalcommerce'
+                password '220cc9476025679c4e5c843666c27d97cfb0f951'
+         }
+     }
     }
 }
 
@@ -38,4 +45,18 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wallet:16.0.1'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    components.all {
+        allVariants {
+            withDependencies { deps ->
+                deps.each { dep ->
+                    if (dep.group == 'net.minidev' && dep.name =='json-smart') {
+                            dep.version {
+                                prefer "2.3"
+                            }
+                            dep.because "resolving dependencies issue"
+                    }
+                }
+            }
+        }
+    }
 }
